feat: build public platform and application entry
